[package]
name = "orderbook"
version = "0.1.0"
authors = ["Maximilian von Gaisberg <github@vongaisberg.de>"]
edition = "2018"

[dependencies]
rand = "0.8.5"
intmap = "0.5.0"
bit-vec = "0.6.1"
#tokio = { version = "0.2", features = ["sync"] }
arr_macro = "0.1.3"
libc = "0.2"
linked-hash-map = "0.5.6"
fxhash = "0.2.1"
rand_distr = "0.4.3"
