[package]
name = "exchange-matching-engine"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
env_logger = "0.10.0"

exchange_lib = { path = "../exchange_lib" }
fxhash = "0.2.1"
log = "0.4.20"
redis = "0.23.3"

tokio = "1.32.0"
