[package]
name = "exchange-port-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
exchange_lib = { path = "../exchange_lib" }
log = "0.4.20"
rand = "0.8.5"
redis = "0.23.3"

serde_json = "*"
serde = { version = "*", features = ["derive"] }
