[package]
name = "exchange_lib"
version = "0.1.0"
authors = ["Maximilian von Gaisberg <github@vongaisberg.de>"]
edition = "2018"

[lib]
name = "exchange_lib"
# path = "src/PathToMain.rs"

[dependencies]
rand = "0.8.5"
bit-vec = "0.6.1"
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread", "macros"] }
libc = "0.2"
linked-hash-map = "0.5.6"
fxhash = "0.2.1"
rand_distr = "0.4.3"
log = "0.4.17"
futures = "0.3.28"
async-channel = "1.8.0"
crossbeam-channel = "0.5.8"
crossbeam = "0.8.2"
redis = "0.23.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.107"
bitcode = "0.4.0"
# simple_logger = "4.2.0"

[dependencies.simple_logger]
default-features = false
features = ["colors"]
